--- a/index.html
+++ b/index.html
@@ -15,24 +15,41 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Develop/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-    <header class="jumbotron">
+    <header class="jumbotron text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <ul id="" class="list-group">
+        <li id="" class="list-group-item d-flex justify-content-evenly m-1 col-12"><p class="">9am</p><textarea class="form-control rounded-corners"></textarea><button class="btn btn-block bg-warning col-3">PH</button></li>
+        <li id="" class="list-group-item d-flex justify-content-evenly m-1 col-12"><p class="">10am</p><textarea class="form-control rounded-corners"></textarea><button class="btn btn-block bg-warning col-3">PH</button></li>
+        <li id="" class="list-group-item d-flex justify-content-evenly m-1 col-12"><p class="">11am</p><textarea class="form-control rounded-corners"></textarea><button class="btn btn-block bg-warning col-3">PH</button></li>
+        <li id="" class="list-group-item d-flex justify-content-evenly m-1 col-12"><p class="">12pm</p><textarea class="form-control rounded-corners"></textarea><button class="btn btn-block bg-warning col-3">PH</button></li>
+        <li id="" class="list-group-item d-flex justify-content-evenly m-1 col-12"><p class="">1pm</p><textarea class="form-control rounded-corners"></textarea><button class="btn btn-block bg-warning col-3">PH</button></li>
+        <li id="" class="list-group-item d-flex justify-content-evenly m-1 col-12"><p class="">2pm</p><textarea class="form-control rounded-corners"></textarea><button class="btn btn-block bg-warning col-3">PH</button></li>
+        <li id="" class="list-group-item d-flex justify-content-evenly m-1 col-12"><p class="">3pm</p><textarea class="form-control rounded-corners"></textarea><button class="btn btn-block bg-warning col-3">PH</button></li>
+        <li id="" class="list-group-item d-flex justify-content-evenly m-1 col-12"><p class="">4pm</p><textarea class="form-control rounded-corners"></textarea><button class="btn btn-block bg-warning col-3">PH</button></li>
+        <li id="" class="list-group-item d-flex justify-content-evenly m-1 col-12"><p class="">5pm</p><textarea class="form-control rounded-corners"></textarea><button class="btn btn-block bg-warning col-3">PH</button></li>
+      </ul>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="./Develop/js/script.js"></script>
   </body>
 </html>
